# rock-paper-scissors

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  install-dependencies.sh
rps/: Cargo.toml
rps-cli/: Cargo.toml
rps-cli/src/: interactive_mode.rs  main.rs
rps-game/: Cargo.toml
rps/src/: choice.rs  compare.rs  lib.rs  result.rs
src/: main.rs
src/rps/: choice.rs  compare.rs  result.rs
