[package]
name = "rps-cli"
version = "0.1.0"
edition = "2021"
authors = ["David Wesst <david@cocobokostudios.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
rand = "0.8.5"
rps = { path = "../rps"}
